trunk/Archive2/35/8568d0c3a062cc/main.cpp
#include <vector>
#include <memory>

int main() 
{
    std::vector<std::unique_ptr<int>> v{ std::unique_ptr<int>{ new int } };
}
